* detect floppy
* detect bus type
* determine USB serial number
* use pre windows XP io control codes as fallback ?
* add support for reading from floppy \\.\A: for builder5 compilation

Beta release
* remove deprecated functions in libsmdev_legacy.[ch]

Deployment
* update msvscpp files
* add borlandc files
* add macosx files

Test:
* add autoconf/make test suite

20120102
* 2012 update
* added windows codepage 932 and 936 support

20111231
* updated libcstring, libuna
* updated msvscpp files

20111224
* updated libcstring, libuna
* updated array type, list type, offset list
* code clean up

20111030
* updated configure.ac and m4 files

20111008
* updated configure.ac and m4 files
* updated common
* updated libuna
* fix for inclusion of last lead out in optical disk session

20111006
* fix for MacOS-X
* updated configure.ac and m4 files

20110906
* worked on session support

20110905
* worked on session support

20110904
* fix for missing last character
* reduced SCSI and USB ioctl timeout to 1 sec
* renamed optical disk to optical disc
* refactored sector list to arrays
* worked on session support

20110831
* updated configure, libuna

20110731
* renamed HAVE_STORAGE_BUS_TYPE to HAVE_WINIOCTL_H_STORAGE_BUS_TYPE

20110727
* updated common
* worked on optical dics track functions
* added UTF-16 information value functions
* updated manuals

20110625
* changes for: warning: AC_LANG_CONFTEST: no AC_LANG_SOURCE call detected in body
* updated include/codepage.h, list type
* updated common, libcstring, libuna

20110322
* updated configure.ac
* updated libcstring

20110306
* updated libuna
* msvscpp added VSDebug option

20110303
* update for Cygwin WINAPI support
* updated libcstring

20110117
* updated libuna
* fixed invalid information value issue
* WINAPI added fallback media size detection for floppy drive
* fix for return value of FormatMessage

20110114
* updated common, libuna

20110110
* updated libcstring, libuna

20110108
* updated configure.ac