@@ -1,5 +1,20 @@
+Building .deb files
+To build .deb files make sure you've have installed debhelper, dpkg-buildpackage and fakeroot
+* copy the dpkg directory to debian
+* run "dpkg-buildpackage -rfakeroot"
+  this will create the .deb files in the parent directory
+
+
+Building .rpm files
+To build .rpm files make sure you've have installed rpmbuild
+* rename the distrubted tar.gz file if necessary; applies to experimental, alpha and beta versions
+  "mv libsmdev-alpha-<version>.tar.gz libsmdev-<version>.tar.gz"
+* run "rpmbuild -ta libsmdev-<version>.tar.gz"
+  this will create the .rpm files in the rpmbuild tree, commonly ~/rpmbuild/RPMS/...
+
+
 Solaris
-To build libsmdev on Solaris make sure that /usr/ccs/bin and /usr/swf/bin are defined in the PATH environment variable
+To build libsmdev on Solaris make sure that /usr/ccs/bin and /usr/sfw/bin are defined in the PATH environment variable
 
 
 Also see:
